testsuite/escript/classes/fail-super-as-child-class-func.err
fail-super-as-child-class-func.src:13:5: error: The 'super' function is reserved for child classes.