testsuite/escript/classes/fail-super-as-child-class-func.src
// A child class cannot define a super function

class BaseClass()
  function BaseClass( this )
  endfunction
endclass

class Foo( BaseClass )
  function Foo( this )
    super();
  endfunction

  function super()
  endfunction
endclass

var obj := Foo();
